<resources>
    <!-- Tambahkan baris ini jika belum ada -->
    <string name="app_name">Toko Buku</string><!-- String lain yang mungkin sudah ada -->
    <string name="app_logo_description">Logo Aplikasi Toko Buku</string>
    <string name="login">login</string>
    <string name="signup">SignUp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="toko_buku">Toko Buku</string>
    <string name="register_link">Don\'t have an account? <b>Sign Up</b></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_link">Already have an account? <b>Login</b></string>
    <string name="welcome">Welcome</string>
    <string name="dani_martinez">Dani Martinez</string>
    <string name="search_book">Search Book</string>
    <string name="top_book">Top Book</string>
    <string name="book_cover">Book Cover</string>
</resources>